--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ I'll pay that doctrine, or else die in debt.
 <article>
 <p><strong>ADDEMDUM</strong><br> 
 
-After watching your insturctional video and going through some of the sources, I decided on doing the Shakespeare story Romeo and Juliet, one of more well known stores and one of my favorites. I copied and pasted the first scene and ran it, it was not formatted and everything looked like one big paragraph. I did not want to submit my work like that so I tried to format it like a play. I first added the title, heading and subheading. Then I bolded the names of the characters as they each spoke and spaced the writing out a bit so it was easier to follow along. There were some points where new characters would come in so I made that noticiable. When the characters would "fight", I added [ ] and bolded the text. Overall, I like the final look of this document but there is always room for improvement. 
+After watching your insturctional video and going through some of the sources, I decided on doing the Shakespeare story Romeo and Juliet, one of the most well known stores and one of my favorites. I copied and pasted the first scene and ran it, it was not formatted and everything looked like one big paragraph. I did not want to submit my work like that so I tried to format it like a play. I first added the title, heading and subheading. Then I bolded the names of the characters as they each spoke and spaced the writing out a bit so it was easier to follow along. There were some points where new characters would come in so I made that noticiable. When the characters would "fight", I added [ ] and bolded the text. Overall, I like the final look of this document but there is always room for improvement. 
 
 </article>
 
